# agent-data-pipeline

./: .gitignore  AGENTS.md  Dockerfile.agent  Dockerfile.langgraph-api  Dockerfile.prefect-worker  README.md  docker-compose.yaml  docker-data.yaml  docker-langgraph.yaml  docker-observation.yaml  docker-prefect.yaml  langgraph.json  observation.yaml  prefect.yaml  pyproject.toml
.github/workflows/: build-agent.yaml  build-worker.yaml  ci.yaml
configs/: default.yaml  development.yaml
configs/monitoring/: prometheus.yml  promtail-config.yml
configs/monitoring/grafana/dashboards/: prefect_flow_run.json  (+1 more)
configs/seaweedfs/: s3.json
flow/: agent-caller.py  etl.py  hello-world.py  hello.py
flows/: etl.py
scripts/: run_pipeline.sh  setup.sh
src/: main.py
src/agent/: graph.py  server.py  test_graph.py  tools.py
src/data_pipeline_agent/: __init__.py  config.py  main.py
src/data_pipeline_agent/agents/: __init__.py  executor.py  image_agent.py  monitor.py  orchestrator.py  planner.py
src/data_pipeline_agent/extractors/: __init__.py  image_reader.py  markdown_exporter.py  ocr_extractor.py
src/data_pipeline_agent/models/: __init__.py  schemas.py  state.py
src/data_pipeline_agent/pipeline/: __init__.py  connector.py  loader.py  transformer.py
src/data_pipeline_agent/tools/: __init__.py  data_tools.py  file_tools.py  validation_tools.py
src/data_pipeline_agent/utils/: __init__.py  helpers.py  logger.py
src/graphs/: __init__.py  monitoring.py
src/memory/: __init__.py  formatter.py  schema.py  signature.py  store.py
tests/: test.py
tests/integration_tests/: test_graph.py
tests/test_agents/: test_image_agent.py  test_orchestrator.py
tests/test_extractors/: test_image_reader.py  test_markdown_exporter.py  test_ocr_extractor.py
tests/test_pipeline/: test_connector.py  test_loader.py  test_transformer.py
tests/test_tools/: test_data_tools.py  test_file_tools.py
tests/unit_tests/: test_memory.py  test_routing.py
(+1 files in other folders)
