[project]
name = "data-pipeline-agent"
version = "0.1.0"
description = "AI agent for automated batch data pipeline orchestration"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.2.0",
    "openrouter>=0.1.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "Pillow>=10.0.0",
    "Prefect>=3.7.8",
    "sqlalchemy>=2.0.0",
    "httpx>=0.27.0",
    "langgraph-cli[inmem]>=0.4.31",
    "langchain-openrouter>=0.2.0",
    "clickhouse-connect>=1.0.0",
    "boto3>=1.35.0",
    "great_expectations>=1.0.0",
    "langchain>=1.3.13",
    "langchain-mcp-adapters>=0.3.0",
    "asyncpg>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
